deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployementapp
  labels:
    app_name: application
spec:
  replicas: 4
  selector:
    matchLabels:
      app_name: application
  strategy:
    rollingUpdate: 
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app_name: application
    spec: 
      containers:
      - name: app
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080
