first_step.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
spec:
  containers:
  - name: app
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
